# carryctx

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  branch_prot.json  build.rs  clippy.toml  deny.toml  flake.nix  justfile  lefthook.yml  nfpm.yaml  rust-toolchain.toml
.carryctx/: config.toml
.carryctx/personas/: bug-hunter.md
.carryctx/rules/: cli-bug-hunting.md
.carryctx/workflows/: dogfood-bug-hunt.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
migrations/project/: 0001_foundation.sql  0002_work_model.sql  0003_progress.sql  0004_worktrees_sessions.sql  0005_checkpoints.sql  0006_collaboration.sql  0007_context_graph.sql
migrations/registry/: 0001_registry.sql
packaging/aur/: PKGBUILD
src/: error.rs  lib.rs  main.rs  output.rs
src/adapter/: config.rs  filesystem.rs  git.rs  mod.rs  sqlite.rs  sqlite_repos.rs  terminal.rs  unit_of_work.rs  xdg.rs
src/application/: agent.rs  checkpoint.rs  collaboration.rs  config_cmd.rs  continuity.rs  doctor.rs  event.rs  export_graph.rs  extract_deps.rs  init.rs  mcp.rs  mod.rs  preset.rs  progress.rs  project_mgmt.rs  runtime.rs  scan_graph.rs  session.rs  skill.rs  stats.rs  sync.rs  task.rs  worktree.rs
src/commands/: agent.rs  checkpoint.rs  (+23 more)
tests/: checkpoint_test.rs  decision_test.rs  e2e_test.rs  handoff_test.rs  init_test.rs  progress_test.rs  session_test.rs  task_test.rs
(+27 files in other folders)
