[package]
name = "carryctx"
version = "0.1.0"
edition = "2024"
description = "Persistent project context for coding agents"
authors = ["Xuepoo"]
license = "MIT"
repository = "https://github.com/Xuepoo/carryctx"
homepage = "https://carryctx.dev"
keywords = ["coding-agent", "project-state", "continuity", "cli"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
globset = "0.4"
ulid = "3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
tempfile = "3"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
pretty_assertions = "1"

[lints.rust]
unsafe_code = "deny"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
